--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_DEBUG=true
 APP_URL=http://laravelfunctionalities21.test
 
 # comment 1
+# Commet 2
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
